package org.example;

public class Inscripcion {
}
