package org.example;

public class Materia {
}
