@startuml
'https://plantuml.com/class-diagram

class Alumno {
  - String nombre
  - List<Materia> materiasAprobadas
  + void aprobarMateria(materia: Materia)
  + boolean tieneAprobada(materia: Materia)
}

class Materia {
  - String nombre
  - List<Materia> correlativas
  + void agregarCorrelativa(materia: Materia)
  + boolean puedeCursar(alumno: Alumno)
}

class Inscripcion {
  - Alumno alumno
  - List<Materia> materias
  + boolean aprobada()
}

"Alumno" <-- "Inscripcion"
"Inscripcion" --> "Materia"
"Materia" --> "Materia"
"Alumno" --> "Materia"

@enduml
